# cortex-act

./: Cargo.toml  README.md
labs/Offline-Processing/.neurosiphon/: active_context.meta.json  active_context.xml
labs/autapia-legacy/.context-slicer/: active_context.meta.json  active_context.xml
labs/autapia-legacy/.neurosiphon/: active_context.meta.json  active_context.xml
labs/autapia-legacy/.neurosiphon/db/: embeddings.json
labs/autapia-legacy/dataset-generator-service/: API_DOCUMENTATION.md  Cargo.toml  build.rs  real_api_schemas.json
labs/autapia-legacy/dataset-generator-service/.github/workflows/: ci.yml
labs/autapia-legacy/dataset-generator-service/datasets/: single_turn_api.json
labs/autapia-legacy/dataset-generator-service/migrations/: 001_initial.sql
labs/autapia-legacy/dataset-generator-service/src/: api_config.rs  clients.rs  database.rs  dynamic_function_dataset_generator.rs  enhanced_pipeline.rs  error.rs  export_dynamic_function_dataset.rs  function_tools.rs  lib.rs  main.rs  orchestrator.rs  pipeline.rs  real_api_dataset_command.rs  real_api_dataset_generator.rs  schema_extractor.rs  service.rs  types.rs  types_minimal.rs  validation.rs
labs/autapia-legacy/dataset-generator-service/src/utils/: chunk_text.rs  cluster_and_sample.rs  filter_quality.rs  load_raw_corpus.rs  mod.rs  serialize_dataset.rs
labs/autapia-legacy/fine-tune-service/: .gitignore  Cargo.toml  build.rs
labs/autapia-legacy/fine-tune-service/config/: mlx_config.json  unsloth_config.json
labs/autapia-legacy/fine-tune-service/migrations/: 001_initial.sql
labs/autapia-legacy/fine-tune-service/proto/: fine_tune.proto
labs/autapia-legacy/fine-tune-service/src/: config.rs  database.rs  error.rs  fine_tune_pb2.py  fine_tune_pb2_grpc.py  function_tools.rs  lib.rs  log_forwarder.rs  main.rs  orchestrator.rs  service.rs
labs/autapia-legacy/fine-tune-service/src/client/: chat_client.rs  embedding_client.rs  mod.rs  vector_client.rs
labs/autapia-legacy/fine-tune-service/src/engine/: mlx_engine.rs  mod.rs
labs/dic/: TRANSLATION_PLAN.md  generate_pure_us_vocab.py  pure_us_vocab_80k.txt  thai_eng_dataset.jsonl  translation_manager.py
labs/dic/.mimicflow/: .gitignore
labs/dic/.neurosiphon/: active_context.meta.json  active_context.xml
labs/dic/.neurosiphon/db/: embeddings.json
labs/flutter_application_1/.neurosiphon/: active_context.meta.json  active_context.xml
labs/flutter_application_1/.neurosiphon/db/: embeddings.json
labs/function-call-py/: README.md  README_gemma3_workshop.md  requirements.txt  requirements_gemma3.txt  workshop_structure.md
labs/function-call-py/.kiro/settings/: mcp.json
labs/function-call-py/.neurosiphon/: active_context.meta.json  active_context.xml
labs/function-call-py/.neurosiphon/db/: embeddings.json
labs/function-call-py/config/: functions.json  gemma3_config.yaml  training_config.yaml
labs/function-call-py/notebooks/: 01_dataset_exploration.ipynb  02_model_training.ipynb  03_evaluation_analysis.ipynb
labs/function-call-py/scripts/: inference_demo.py  run_training.sh
labs/function-call-py/src/: data_preparation.py  evaluation.py  function_registry.py  gemma_client.py  training.py
labs/function-call-py/src/tools/: search_tool.py  translation_tool.py
labs/ocr-compare/: README.md  benchmark.py  requirements.txt  tmpezb_0ow2.py  tmpkmsob_oy.py  tmpp0u4i8gb.py  tmptj4_rzt3.py
labs/ocr-compare/.neurosiphon/: active_context.meta.json  active_context.xml
labs/ocr-compare/.neurosiphon/db/: embeddings.json
labs/ocr-compare/data/: ground_truth.example.txt
labs/ocr-compare/docker/: Dockerfile.paddleocr-arm64  Dockerfile.paddleocr-repo-arm64
labs/ocr-compare/ocrbench/: __init__.py  engines.py  metrics.py  preprocess.py  utils.py
labs/ocr-compare/outputs/: easyocr.txt  tesseract.txt  trocr.txt
labs/ocr-compare/reports/: summary.json  summary.md
labs/ocr-compare/scripts/: __init__.py  engines.py  full_test.sh  metrics.py  paddle_ocr_infer.py  paddle_repo_runner.py  preprocess.py  run_benchmark.py  utils.py
labs/ocr-transformer/: KOSMOS25_RUN_REPORT.md  KOSMOS25_RUN_REPORT_TEMPLATE.md  README_KOSMOS25_MPS.md  README_TYPHOON_OCR_MPS.md  demo_output.txt  output_md_clean.txt  output_md_raw.txt  output_ocr_clean.txt  output_ocr_ocr_lines.csv  output_ocr_parsed.json  output_ocr_raw.txt  run_kosmos25_demo.py  run_typhoon_api.py  run_typhoon_ocr.py
labs/ocr-transformer/.neurosiphon/: active_context.meta.json  active_context.xml
labs/ocr-transformer/.neurosiphon/db/: embeddings.json
labs/ocr-transformer/scripts/: setup_kosmos25.sh  setup_typhoon_ocr.sh
labs/terminal_extension/: .gitignore  .npmignore  .vscodeignore  README.md  mcp-config.json  mcp-package.json  package-lock.json  package.json  setup-mcp-integration.sh  setup-mcp.sh  tsconfig.json
labs/terminal_extension/.neurosiphon/: active_context.meta.json  active_context.xml
labs/terminal_extension/.neurosiphon/db/: embeddings.json
labs/terminal_extension/mcp-server/: README.md  claude_desktop_config.json  package-lock.json  package.json
labs/terminal_extension/mcp-server/src/: index.js  index.js.map  index.ts
labs/terminal_extension/src/: extension.ts
src/: grammar_manager.rs  main.rs
src/act/: editor.rs
