[package]
name = "cortex-act"
version = "1.0.0"
edition = "2021"
description = "The AI-Native Code Action Backend for LLM agents. Pure Rust MCP server that acts as the 'hands' — executing commands, patching files, and applying surgical code edits."
authors = ["Thanon Aphithanawat <thanon@aphithanawat.me>"]
repository = "https://github.com/DevsHero/cortex-act"
keywords = ["llm", "mcp", "code-action", "rust", "ast"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"

[[bin]]
name = "cortex-act"
path = "src/main.rs"

[dependencies]
clap       = { version = "4.5", features = ["derive"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow     = "1.0"
dirs       = "6.0.0"
regex      = "1.10"
toml       = "0.8"
toml_edit  = "0.22"
serde_yaml = "0.9"
tokio      = { version = "1.0", features = ["full"] }
ureq      = { version = "2.12", features = ["json"] }

# Tree-sitter for AST semantic patching (core-3 statically linked)
tree-sitter      = { version = "0.26.5", features = ["wasm"] }
tree-sitter-rust = "0.21.0"

[dev-dependencies]
tempfile = "3.15.0"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = true
opt-level     = 3
